# sreda-wind

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
sreda_wind/case/: __init__.py  _foam.py  boundary.py  constant_dicts.py  fields.py  generate.py  mesh_dicts.py  porous.py  settings.py  system_dicts.py
sreda_wind/core/: __init__.py  abl.py  box.py  domain.py  mesh.py  wind.py
sreda_wind/geometry/: __init__.py  mesh.py  stl.py  triangulate.py  validate.py
sreda_wind/post/: __init__.py  sampling.py
sreda_wind/solver/: SPEC.md  __init__.py  convergence.py  logparse.py  runner.py
tests/: test_case.py  test_case_variants.py  test_core.py  test_geometry.py  test_post.py  test_smoke.py  test_solver_convergence.py  test_solver_logparse.py  test_solver_runner.py
tests/aij/: PHASE1_MODEL_MATRIX.md  __init__.py  metrics.py  test_metrics.py
tests/aij/case_a/: SPEC.md  VALIDATION_RESULTS.md  __init__.py  conditions.py  geometry.py  inlet.py  reattachment.py  reference.py  reference_data.json  run_validation.py  test_case_a.py
tests/aij/case_a/validation_data/: README.md  incident_fetch.csv  incident_fetch_HW.csv  incident_fetch_equilibrium.csv  incident_fetch_equilibrium_cleanmesh.csv  incident_fetch_parente.csv  pedestrian_z0125_kepsilon.csv  pedestrian_z0125_kepsilon_parente.csv  pedestrian_z0125_kepsilon_structured.csv  reattachment_floor.csv  (+9 more)
tests/aij/case_b/: SPEC.md  VALIDATION_RESULTS.md  __init__.py  conditions.py  geometry.py  reference.py  run_validation.py  test_case_b.py
tests/aij/case_c/: SPEC.md  VALIDATION_RESULTS.md  __init__.py  geometry.py
(+2 files in other folders)
