[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sreda-wind"
version = "0.1.0"
description = "Urban pedestrian wind comfort engine (AIJ validation -> ML surrogate)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["sreda_wind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
